# qvd-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
examples/: claude_desktop_config.example.json  config.example.toml
src/qvd_mcp/: __init__.py  __main__.py  claude_config.py  cli.py  config.py  convert.py  doctor.py  logging_setup.py  naming.py  server.py  setup_wizard.py  state.py
src/qvd_mcp/readers/: __init__.py  pyqvd_reader.py
tests/: test_claude_config.py  test_config.py  test_convert.py  test_doctor.py  test_naming.py  test_server.py  test_setup_wizard.py  test_state.py
tests/fixtures/: generate.py
