[project]
name = "qvd-mcp"
version = "0.1.0"
description = "Query QVD files directly from disk with SQL and AI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "DanielB" },
]
keywords = ["mcp", "qvd", "qlik", "duckdb", "parquet", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyqvd>=2.3,<3",
    "duckdb>=1.1,<2",
    "pyarrow>=16,<25",
    "mcp>=1.0,<2",
    "platformdirs>=4,<5",
    "typer>=0.12,<1",
    "rich>=13,<15",
]

[project.scripts]
qvd-mcp = "qvd_mcp.cli:app"

[project.urls]
Homepage = "https://github.com/DanielB/qvd-mcp"
Source = "https://github.com/DanielB/qvd-mcp"
Issues = "https://github.com/DanielB/qvd-mcp/issues"
Changelog = "https://github.com/DanielB/qvd-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/DanielB/qvd-mcp#readme"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qvd_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/qvd_mcp"]

[[tool.mypy.overrides]]
module = ["pyqvd", "pyqvd.*", "pyarrow", "pyarrow.*", "mcp", "mcp.*", "duckdb"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
